# BasePython.2021-11

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  plane.py
homework_03/: Dockerfile  pyproject.toml
homework_03/app/: main.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  app.py  config.py  docker-compose.yaml  main.py  postgres.env  prestart.sh  requirements.txt
homework_06/docker-build/: Dockerfile
homework_06/migrations/versions/: 848ca3e77daf_.py
homework_06/models/: __init__.py  library.py
homework_06/templates/: base.html
homework_06/views/: library.py
