[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["Igor Mukhutdinov <igor.muhutdinov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = "^0.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
